--- a/App.ipynb
+++ b/App.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d957e0dd",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dcd8027f",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,8 @@
       "2  pink morsel  $3.00       505  2020-10-13   east\n",
       "3  pink morsel  $3.00       561  2020-10-13   west\n",
       "4  gold morsel  $9.99       553  2020-10-13  north\n",
-      "DataFrames loaded successfully.\n"
+      "DataFrames loaded successfully.\n",
+      "All DataFrames concatenated successfully.\n"
      ]
     }
    ],
@@ -57,6 +58,29 @@
     "files = [df, df2, df3]\n",
     "df_all = pd.concat(files, ignore_index=True)\n",
     "print(\"All DataFrames concatenated successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a47f5807",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1500.0)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r\"data/pink_morsel_sales.csv\")\n",
+    "df['Sales'].max()\n",
+    "df['Sales'].min()"
    ]
   }
  ],
